--- a/pom.xml
+++ b/pom.xml
@@ -2,12 +2,12 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.careydevelopment</groupId>
   <artifactId>restdemo</artifactId>
-  <version>1.0.0-RELEASE</version>
+  <version>1.0</version>
   
     <parent>
   	<groupId>org.springframework.boot</groupId>
   	<artifactId>spring-boot-starter-parent</artifactId>
-  	<version>1.4.3.RELEASE</version>
+  	<version>1.5.2.RELEASE</version>
   </parent>
   
   <dependencies>
@@ -20,9 +20,9 @@
 		<artifactId>spring-boot-starter-thymeleaf</artifactId>
 	</dependency>
   </dependencies>
-  
+
   <properties>
-  	<java.version>1.8</java.version>
+    <java.version>1.8</java.version>
   </properties>
   
   <build>
